--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,11 +48,17 @@ smoltcp = { version = "0.12.0", default-features = false, features = [
   "socket-tcp",
   "socket-udp",
 ] }
-trouble-host = {version = "0.5.1", features = ["peripheral", "scan"]}
+trouble-host = {version = "0.5.1", features = ["peripheral", "scan", "gatt", "security", "central", "derive", "default-packet-pool"]}
 embassy-executor = {version = "0.9.1"}
 heapless = "0.9.2"
 embassy-futures = "0.1.2"
 embassy-time = "0.5.0"
+static_cell = "2.1.1"
+embassy-sync = "0.7.2"
+sequential-storage = { version = "7.1.0" }
+embedded-storage-async = "0.4.1"
+embassy-embedded-hal = "0.5.0"
+esp-storage = {version = "0.8.1", features = ["esp32", "esp-hal"] }
 
 
 [profile.dev]
