--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,11 @@ version      = "0.1.0"
 name = "esp32-tamagotchi"
 path = "./src/bin/main.rs"
 
+[[bin]]
+name = "esp32-tamagotchi-notifications"
+path = "./src/bin/main_notifications.rs"
+
+
 [dependencies]
 esp-hal = { version = "~1.0", features = ["esp32", "log-04", "unstable"] }
 
